Bug 169656 - Crash upon starting animated GIF
Summary: Crash upon starting animated GIF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Images-Animated
  Show dependency treegraph
 
Reported: 2025-11-24 10:16 UTC by Gabor Kelemen (Collabora)
Modified: 2025-11-25 10:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace from bibisect repo 26.2-linux (38.42 KB, text/x-log)
2025-11-24 10:16 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-11-24 10:16:30 UTC
Created attachment 204249 [details]
backtrace from bibisect repo 26.2-linux

Master started to crash when an animated gif starts to play.

1. Open attachment 173047 [details] from bug 142957 in Impress
2. Go to the second slide in edit mode (it works in presentation mode!) where there is an animated gif
-> Crash

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 177b3d2a88afb2dfd3e89025624d8bf62b36cda4
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started in: 

https://git.libreoffice.org/core/+/e6a8c40e5051363d5825bd09131b86cf8a2b659b

commit e6a8c40e5051363d5825bd09131b86cf8a2b659b	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Sep 30 14:54:37 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Sep 30 18:22:59 2025 +0200

tdf#116975 Laggy behavior when clicking between table cells in impress

Adding CC to: Noel Grandin
Comment 1 Noel Grandin 2025-11-24 10:42:44 UTC
Works for me on master, was likely fixed by

  commit 1c8b8d1fb80e6445aaeca2f2df6816d223277dbc
  Author: Noel Grandin <noelgrandin@gmail.com>
  Date:   Fri Nov 7 16:38:40 2025 +0200

  tdf#168928 Draw object not removed from the view after delete
Comment 2 Noel Grandin 2025-11-24 11:37:01 UTC
Aha, can reproduce now, it is somewhat timing dependant
Comment 3 Commit Notification 2025-11-25 10:53:48 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12baba92e0a581866c6dedea428e888dd0934d78

tdf#169656 Crash upon starting animated GIF

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.